--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,10 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
+    //navigation
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0-alpha03"
+
 
     // To use Kotlin annotation processing tool (kapt) MUST HAVE!
     kapt("androidx.room:room-compiler:$room_version")
