--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,11 +8,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.postpone'
+    namespace 'halit.sen.postpone'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.postpone"
+        applicationId "halit.sen.postpone"
         minSdk 21
         targetSdk 32
         versionCode 1
