--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="halit.sen.postpone">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:name=".PostponeApplication"
@@ -14,7 +19,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Postpone"
         android:windowSoftInputMode="adjustResize"
+        android:requestLegacyExternalStorage="true"
         tools:targetApi="31">
+        <profileable
+            android:shell="true"
+            tools:targetApi="31" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
