--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         compose_ui_version = '1.1.1'
-        room_version = '2.3.0'
+        room_version = '2.4.0-alpha03'
         hilt_version = '2.39'
     }
     repositories {
