--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,7 +95,7 @@ dependencies {
     implementation "com.google.accompanist:accompanist-pager-indicators:0.25.0"
 
     //benchmark
-    implementation "androidx.profileinstaller:profileinstaller:1.3.0-alpha01"
+    //implementation "androidx.profileinstaller:profileinstaller:1.3.0-alpha01"
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
     androidTestImplementation 'app.cash.turbine:turbine:0.9.0'
