--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,12 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    lintOptions {
+        abortOnError false
+        absolutePaths false
+        lintConfig file('lint.xml')
+        baseline file('lint-baseline.xml')
+    }
 }
 
 dependencies {
