--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,9 +5,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
-    id 'com.google.firebase.appdistribution'
-    id 'com.google.gms.google-services'
-}
+    id 'com.google.firebase.appdistribution'}
 
 android {
     namespace 'halit.sen.postpone'
