--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,7 @@ android {
 }
 
 dependencies {
+    implementation(project(":core:common"))
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
