data and domain module

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,5 @@ rootProject.name = "Postpone"
 include ':app'
 include ':benchmark'
 include ':core:common'
+include ':core:data'
+include ':core:domain'
