--- a/core/data/build.gradle
+++ b/core/data/build.gradle
@@ -8,11 +8,11 @@ plugins {
 
 android {
     namespace 'halit.sen.data'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         minSdk 21
-        targetSdk 32
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -54,4 +54,6 @@ dependencies {
 
     kapt("androidx.room:room-compiler:$room_version")
     implementation "androidx.room:room-ktx:$room_version"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
+    androidTestImplementation 'app.cash.turbine:turbine:0.9.0'
 }
