--- a/core/data/build.gradle
+++ b/core/data/build.gradle
@@ -55,5 +55,12 @@ dependencies {
     kapt("androidx.room:room-compiler:$room_version")
     implementation "androidx.room:room-ktx:$room_version"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
+
+    // Mockito
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
+    testImplementation "org.mockito:mockito-inline:3.0.0"
+    //turbine
     androidTestImplementation 'app.cash.turbine:turbine:0.9.0'
+    //truth
+    testImplementation "com.google.truth:truth:1.1.2"
 }
