--- a/core/domain/build.gradle
+++ b/core/domain/build.gradle
@@ -45,8 +45,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-
     //Hilt-Dagger
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
+
+    //turbine
+    testImplementation 'app.cash.turbine:turbine:0.9.0'
+    //truth
+    testImplementation "com.google.truth:truth:1.1.2"
 }
